compiler/compiler/tests/language/negative/oopSurfaceRoleCapability/callResolution/namedArgumentAsPositional.qn
pub wrongNamedArgument(ctx: HttpCtx<AuthUser>) -> Result<CreateUserBody, IntoHttpError> {
  return ctx.query<CreateUserBody>(limit: 64)
}
